codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_agent_message_ends_with_completion_time.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "cells.iter().map(|lines| lines_to_single_string(lines)).collect::<String>()"
---
• A concise final answer.

  [completion time]
